--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ body {
   font-size: 20px;
   font-family: Comfortaa;
   top: 12%;
-  background-image: url('file:///C:/Users/PRASHAM/Downloads/search+icon-1320085881930941832_32.png');
+  background-image: url('search-131965017622239255_0.svg');
   background-repeat: no-repeat;
   padding-left: 40px;
   background-size: 35px;
