--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ body {
   }
 }
 .drive-search-bar {
-  width: 200px;
+  width: 350px;
 	
   border-radius: 10px;
   padding: 5px;
@@ -118,7 +118,7 @@ body {
   height: 50px;
   border: 2px solid grey;
   position: absolute;
-  right: 30%;
+  right: 20%;
   outline: none;
   font-size: 20px;
   font-family: Comfortaa;
@@ -130,7 +130,7 @@ body {
   background-position: left;
 }
 .drive-search-bar:focus {
-box-shadow : 0px 0px 10px 10px;
+box-shadow : 0px 0px 4px 4px #eee;
 }
 .user-content{
  border: 0px ;
